welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:6: error: reassignment to val
  return ((ad==bd)||(ad==bc)||(ac==bd)||(ac=bc))} 
                                           ^